Fixed recent activity avatar alignment.

--- a/app/assets/stylesheets/modules/dashboard.css.styl
+++ b/app/assets/stylesheets/modules/dashboard.css.styl
@@ -11,6 +11,9 @@
   .singleRunner
     .name
       margin-left 0.2em
+  .singleRunner, .multipleRunners
+    span
+      vertical-align middle
   .labels
     margin-left 0.4em
   .details
